force-app/main/default/objects/REVA_Hostel_Fees__c/REVA_Hostel_Fees__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>REVA Hostel Fees</label>
</CustomObject>