force-app/main/default/objects/REVA_Hostel_Fees__c/fields/Hostel_Room_Fees__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Room_Fees__c</fullName>
    <description>Hostel Room Fees will be storing all the fees of different types of rooms</description>
    <inlineHelpText>Hostel Room Fees will be storing all the fees of different types of rooms</inlineHelpText>
    <label>Hostel Room Fees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>