force-app/main/default/objects/REVA_Hostel_Fees__c/fields/Is_Final_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Final_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Final Year</label>
    <type>Checkbox</type>
</CustomField>