force-app/main/default/objects/REVA_Hostel_Fees__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <inlineHelpText>Select the Occupancy 1,2,3,4,6,8</inlineHelpText>
    <label>Occupancy</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>