force-app/main/default/objects/REVA_Hostel_Fees__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is Premium to be selected when the room type is Premium</inlineHelpText>
    <label>Premium</label>
    <type>Checkbox</type>
</CustomField>